// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CustomerForm Performance & Snapshot Tests > Snapshot Tests > matches snapshot for edit customer form 1`] = `
<div
  class="space-y-6"
>
  <div
    class="bg-white shadow rounded-lg"
  >
    <div
      class="px-6 py-4"
    >
      <h1
        class="text-xl font-semibold text-gray-900"
      >
        Add New Customer
      </h1>
      <p
        class="text-gray-500 mt-2"
      >
        Fill out the form below to add a new customer
      </p>
    </div>
    <form
      class="px-6 pb-6"
    >
      <div
        class="grid grid-cols-1 md:grid-cols-2 gap-6"
      >
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="first_name"
          >
            First Name *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="first_name"
            name="first_name"
            placeholder="Enter first name"
            type="text"
            value=""
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="last_name"
          >
            Last Name *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="last_name"
            name="last_name"
            placeholder="Enter last name"
            type="text"
            value=""
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="email"
          >
            Email Address *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="email"
            name="email"
            placeholder="Enter email address"
            type="email"
            value=""
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="phone"
          >
            Phone Number *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="phone"
            name="phone"
            placeholder="Enter phone number"
            type="tel"
            value=""
          />
        </div>
      </div>
      <div
        class="flex justify-end space-x-3 mt-6"
      >
        <button
          class="px-4 py-2 text-sm font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
          type="button"
        >
          Cancel
        </button>
        <button
          class="px-4 py-2 text-sm font-medium text-white bg-blue-600 border border-transparent rounded-md shadow-sm hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed"
          type="submit"
        >
          Create Customer
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CustomerForm Performance & Snapshot Tests > Snapshot Tests > matches snapshot for filled form 1`] = `
<div
  class="space-y-6"
>
  <div
    class="bg-white shadow rounded-lg"
  >
    <div
      class="px-6 py-4"
    >
      <h1
        class="text-xl font-semibold text-gray-900"
      >
        Add New Customer
      </h1>
      <p
        class="text-gray-500 mt-2"
      >
        Fill out the form below to add a new customer
      </p>
    </div>
    <form
      class="px-6 pb-6"
    >
      <div
        class="grid grid-cols-1 md:grid-cols-2 gap-6"
      >
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="first_name"
          >
            First Name *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="first_name"
            name="first_name"
            placeholder="Enter first name"
            type="text"
            value="aJaoahanaaa"
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="last_name"
          >
            Last Name *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="last_name"
            name="last_name"
            placeholder="Enter last name"
            type="text"
            value="aDaoaeaaa"
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="email"
          >
            Email Address *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="email"
            name="email"
            placeholder="Enter email address"
            type="email"
            value="ajaoahana.adaoaea@aeaxaaamapalaea.acaoamaaa"
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="phone"
          >
            Phone Number *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="phone"
            name="phone"
            placeholder="Enter phone number"
            type="tel"
            value="a(a5a5a5a)a a1a2a3a-a4a5a6a7a"
          />
        </div>
      </div>
      <div
        class="flex justify-end space-x-3 mt-6"
      >
        <button
          class="px-4 py-2 text-sm font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
          type="button"
        >
          Cancel
        </button>
        <button
          class="px-4 py-2 text-sm font-medium text-white bg-blue-600 border border-transparent rounded-md shadow-sm hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed"
          type="submit"
        >
          Create Customer
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CustomerForm Performance & Snapshot Tests > Snapshot Tests > matches snapshot for form with validation errors 1`] = `
<div
  class="space-y-6"
>
  <div
    class="bg-white shadow rounded-lg"
  >
    <div
      class="px-6 py-4"
    >
      <h1
        class="text-xl font-semibold text-gray-900"
      >
        Add New Customer
      </h1>
      <p
        class="text-gray-500 mt-2"
      >
        Fill out the form below to add a new customer
      </p>
    </div>
    <form
      class="px-6 pb-6"
    >
      <div
        class="grid grid-cols-1 md:grid-cols-2 gap-6"
      >
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="first_name"
          >
            First Name *
          </label>
          <input
            aria-describedby="first_name-error"
            aria-invalid="true"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-red-300 focus:ring-red-500 focus:border-red-500"
            id="first_name"
            name="first_name"
            placeholder="Enter first name"
            type="text"
            value=""
          />
          <p
            class="mt-1 text-sm text-red-600"
            id="first_name-error"
            role="alert"
          >
            First name is required
          </p>
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="last_name"
          >
            Last Name *
          </label>
          <input
            aria-describedby="last_name-error"
            aria-invalid="true"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-red-300 focus:ring-red-500 focus:border-red-500"
            id="last_name"
            name="last_name"
            placeholder="Enter last name"
            type="text"
            value=""
          />
          <p
            class="mt-1 text-sm text-red-600"
            id="last_name-error"
            role="alert"
          >
            Last name is required
          </p>
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="email"
          >
            Email Address *
          </label>
          <input
            aria-describedby="email-error"
            aria-invalid="true"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-red-300 focus:ring-red-500 focus:border-red-500"
            id="email"
            name="email"
            placeholder="Enter email address"
            type="email"
            value=""
          />
          <p
            class="mt-1 text-sm text-red-600"
            id="email-error"
            role="alert"
          >
            Email is required
          </p>
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="phone"
          >
            Phone Number *
          </label>
          <input
            aria-describedby="phone-error"
            aria-invalid="true"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-red-300 focus:ring-red-500 focus:border-red-500"
            id="phone"
            name="phone"
            placeholder="Enter phone number"
            type="tel"
            value=""
          />
          <p
            class="mt-1 text-sm text-red-600"
            id="phone-error"
            role="alert"
          >
            Phone number is required
          </p>
        </div>
      </div>
      <div
        class="flex justify-end space-x-3 mt-6"
      >
        <button
          class="px-4 py-2 text-sm font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
          type="button"
        >
          Cancel
        </button>
        <button
          class="px-4 py-2 text-sm font-medium text-white bg-blue-600 border border-transparent rounded-md shadow-sm hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed"
          type="submit"
        >
          Create Customer
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CustomerForm Performance & Snapshot Tests > Snapshot Tests > matches snapshot for loading state 1`] = `null`;

exports[`CustomerForm Performance & Snapshot Tests > Snapshot Tests > matches snapshot for new customer form 1`] = `
<div
  class="space-y-6"
>
  <div
    class="bg-white shadow rounded-lg"
  >
    <div
      class="px-6 py-4"
    >
      <h1
        class="text-xl font-semibold text-gray-900"
      >
        Add New Customer
      </h1>
      <p
        class="text-gray-500 mt-2"
      >
        Fill out the form below to add a new customer
      </p>
    </div>
    <form
      class="px-6 pb-6"
    >
      <div
        class="grid grid-cols-1 md:grid-cols-2 gap-6"
      >
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="first_name"
          >
            First Name *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="first_name"
            name="first_name"
            placeholder="Enter first name"
            type="text"
            value=""
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="last_name"
          >
            Last Name *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="last_name"
            name="last_name"
            placeholder="Enter last name"
            type="text"
            value=""
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="email"
          >
            Email Address *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="email"
            name="email"
            placeholder="Enter email address"
            type="email"
            value=""
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="phone"
          >
            Phone Number *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="phone"
            name="phone"
            placeholder="Enter phone number"
            type="tel"
            value=""
          />
        </div>
      </div>
      <div
        class="flex justify-end space-x-3 mt-6"
      >
        <button
          class="px-4 py-2 text-sm font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
          type="button"
        >
          Cancel
        </button>
        <button
          class="px-4 py-2 text-sm font-medium text-white bg-blue-600 border border-transparent rounded-md shadow-sm hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed"
          type="submit"
        >
          Create Customer
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CustomerForm Performance & Snapshot Tests > Snapshot Tests > matches snapshot for responsive layout 1`] = `
<div
  class="space-y-6"
>
  <div
    class="bg-white shadow rounded-lg"
  >
    <div
      class="px-6 py-4"
    >
      <h1
        class="text-xl font-semibold text-gray-900"
      >
        Add New Customer
      </h1>
      <p
        class="text-gray-500 mt-2"
      >
        Fill out the form below to add a new customer
      </p>
    </div>
    <form
      class="px-6 pb-6"
    >
      <div
        class="grid grid-cols-1 md:grid-cols-2 gap-6"
      >
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="first_name"
          >
            First Name *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="first_name"
            name="first_name"
            placeholder="Enter first name"
            type="text"
            value=""
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="last_name"
          >
            Last Name *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="last_name"
            name="last_name"
            placeholder="Enter last name"
            type="text"
            value=""
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="email"
          >
            Email Address *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="email"
            name="email"
            placeholder="Enter email address"
            type="email"
            value=""
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="phone"
          >
            Phone Number *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="phone"
            name="phone"
            placeholder="Enter phone number"
            type="tel"
            value=""
          />
        </div>
      </div>
      <div
        class="flex justify-end space-x-3 mt-6"
      >
        <button
          class="px-4 py-2 text-sm font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
          type="button"
        >
          Cancel
        </button>
        <button
          class="px-4 py-2 text-sm font-medium text-white bg-blue-600 border border-transparent rounded-md shadow-sm hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed"
          type="submit"
        >
          Create Customer
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CustomerForm Performance & Snapshot Tests Snapshot Tests matches snapshot for edit customer form 1`] = `
<div
  class="space-y-6"
>
  <div
    class="bg-white shadow rounded-lg"
  >
    <div
      class="px-6 py-4"
    >
      <h1
        class="text-xl font-semibold text-gray-900"
      >
        Add New Customer
      </h1>
      <p
        class="text-gray-500 mt-2"
      >
        Fill out the form below to add a new customer
      </p>
    </div>
    <form
      class="px-6 pb-6"
    >
      <div
        class="grid grid-cols-1 md:grid-cols-2 gap-6"
      >
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="first_name"
          >
            First Name *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="first_name"
            name="first_name"
            placeholder="Enter first name"
            type="text"
            value=""
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="last_name"
          >
            Last Name *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="last_name"
            name="last_name"
            placeholder="Enter last name"
            type="text"
            value=""
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="email"
          >
            Email Address *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="email"
            name="email"
            placeholder="Enter email address"
            type="email"
            value=""
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="phone"
          >
            Phone Number *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="phone"
            name="phone"
            placeholder="Enter phone number"
            type="tel"
            value=""
          />
        </div>
      </div>
      <div
        class="flex justify-end space-x-3 mt-6"
      >
        <button
          class="px-4 py-2 text-sm font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
          type="button"
        >
          Cancel
        </button>
        <button
          class="px-4 py-2 text-sm font-medium text-white bg-blue-600 border border-transparent rounded-md shadow-sm hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed"
          type="submit"
        >
          Create Customer
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CustomerForm Performance & Snapshot Tests Snapshot Tests matches snapshot for filled form 1`] = `
<div
  class="space-y-6"
>
  <div
    class="bg-white shadow rounded-lg"
  >
    <div
      class="px-6 py-4"
    >
      <h1
        class="text-xl font-semibold text-gray-900"
      >
        Add New Customer
      </h1>
      <p
        class="text-gray-500 mt-2"
      >
        Fill out the form below to add a new customer
      </p>
    </div>
    <form
      class="px-6 pb-6"
    >
      <div
        class="grid grid-cols-1 md:grid-cols-2 gap-6"
      >
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="first_name"
          >
            First Name *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="first_name"
            name="first_name"
            placeholder="Enter first name"
            type="text"
            value="aJaoahanaaaa"
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="last_name"
          >
            Last Name *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="last_name"
            name="last_name"
            placeholder="Enter last name"
            type="text"
            value="aDaoaeaaaa"
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="email"
          >
            Email Address *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="email"
            name="email"
            placeholder="Enter email address"
            type="email"
            value="ajaoahana.adaoaea@aeaxaaamapalaea.acaoamaaaa"
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="phone"
          >
            Phone Number *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="phone"
            name="phone"
            placeholder="Enter phone number"
            type="tel"
            value="a(a5a5a5a)a a1a2a3a-a4a5a6a7aa"
          />
        </div>
      </div>
      <div
        class="flex justify-end space-x-3 mt-6"
      >
        <button
          class="px-4 py-2 text-sm font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
          type="button"
        >
          Cancel
        </button>
        <button
          class="px-4 py-2 text-sm font-medium text-white bg-blue-600 border border-transparent rounded-md shadow-sm hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed"
          type="submit"
        >
          Create Customer
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CustomerForm Performance & Snapshot Tests Snapshot Tests matches snapshot for form with validation errors 1`] = `
<div
  class="space-y-6"
>
  <div
    class="bg-white shadow rounded-lg"
  >
    <div
      class="px-6 py-4"
    >
      <h1
        class="text-xl font-semibold text-gray-900"
      >
        Add New Customer
      </h1>
      <p
        class="text-gray-500 mt-2"
      >
        Fill out the form below to add a new customer
      </p>
    </div>
    <form
      class="px-6 pb-6"
    >
      <div
        class="grid grid-cols-1 md:grid-cols-2 gap-6"
      >
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="first_name"
          >
            First Name *
          </label>
          <input
            aria-describedby="first_name-error"
            aria-invalid="true"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-red-300 focus:ring-red-500 focus:border-red-500"
            id="first_name"
            name="first_name"
            placeholder="Enter first name"
            type="text"
            value=""
          />
          <p
            class="mt-1 text-sm text-red-600"
            id="first_name-error"
            role="alert"
          >
            First name is required
          </p>
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="last_name"
          >
            Last Name *
          </label>
          <input
            aria-describedby="last_name-error"
            aria-invalid="true"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-red-300 focus:ring-red-500 focus:border-red-500"
            id="last_name"
            name="last_name"
            placeholder="Enter last name"
            type="text"
            value=""
          />
          <p
            class="mt-1 text-sm text-red-600"
            id="last_name-error"
            role="alert"
          >
            Last name is required
          </p>
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="email"
          >
            Email Address *
          </label>
          <input
            aria-describedby="email-error"
            aria-invalid="true"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-red-300 focus:ring-red-500 focus:border-red-500"
            id="email"
            name="email"
            placeholder="Enter email address"
            type="email"
            value=""
          />
          <p
            class="mt-1 text-sm text-red-600"
            id="email-error"
            role="alert"
          >
            Email is required
          </p>
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="phone"
          >
            Phone Number *
          </label>
          <input
            aria-describedby="phone-error"
            aria-invalid="true"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-red-300 focus:ring-red-500 focus:border-red-500"
            id="phone"
            name="phone"
            placeholder="Enter phone number"
            type="tel"
            value=""
          />
          <p
            class="mt-1 text-sm text-red-600"
            id="phone-error"
            role="alert"
          >
            Phone number is required
          </p>
        </div>
      </div>
      <div
        class="flex justify-end space-x-3 mt-6"
      >
        <button
          class="px-4 py-2 text-sm font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
          type="button"
        >
          Cancel
        </button>
        <button
          class="px-4 py-2 text-sm font-medium text-white bg-blue-600 border border-transparent rounded-md shadow-sm hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed"
          type="submit"
        >
          Create Customer
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CustomerForm Performance & Snapshot Tests Snapshot Tests matches snapshot for loading state 1`] = `null`;

exports[`CustomerForm Performance & Snapshot Tests Snapshot Tests matches snapshot for new customer form 1`] = `
<div
  class="space-y-6"
>
  <div
    class="bg-white shadow rounded-lg"
  >
    <div
      class="px-6 py-4"
    >
      <h1
        class="text-xl font-semibold text-gray-900"
      >
        Add New Customer
      </h1>
      <p
        class="text-gray-500 mt-2"
      >
        Fill out the form below to add a new customer
      </p>
    </div>
    <form
      class="px-6 pb-6"
    >
      <div
        class="grid grid-cols-1 md:grid-cols-2 gap-6"
      >
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="first_name"
          >
            First Name *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="first_name"
            name="first_name"
            placeholder="Enter first name"
            type="text"
            value=""
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="last_name"
          >
            Last Name *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="last_name"
            name="last_name"
            placeholder="Enter last name"
            type="text"
            value=""
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="email"
          >
            Email Address *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="email"
            name="email"
            placeholder="Enter email address"
            type="email"
            value=""
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="phone"
          >
            Phone Number *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="phone"
            name="phone"
            placeholder="Enter phone number"
            type="tel"
            value=""
          />
        </div>
      </div>
      <div
        class="flex justify-end space-x-3 mt-6"
      >
        <button
          class="px-4 py-2 text-sm font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
          type="button"
        >
          Cancel
        </button>
        <button
          class="px-4 py-2 text-sm font-medium text-white bg-blue-600 border border-transparent rounded-md shadow-sm hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed"
          type="submit"
        >
          Create Customer
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CustomerForm Performance & Snapshot Tests Snapshot Tests matches snapshot for responsive layout 1`] = `
<div
  class="space-y-6"
>
  <div
    class="bg-white shadow rounded-lg"
  >
    <div
      class="px-6 py-4"
    >
      <h1
        class="text-xl font-semibold text-gray-900"
      >
        Add New Customer
      </h1>
      <p
        class="text-gray-500 mt-2"
      >
        Fill out the form below to add a new customer
      </p>
    </div>
    <form
      class="px-6 pb-6"
    >
      <div
        class="grid grid-cols-1 md:grid-cols-2 gap-6"
      >
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="first_name"
          >
            First Name *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="first_name"
            name="first_name"
            placeholder="Enter first name"
            type="text"
            value=""
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="last_name"
          >
            Last Name *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="last_name"
            name="last_name"
            placeholder="Enter last name"
            type="text"
            value=""
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="email"
          >
            Email Address *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="email"
            name="email"
            placeholder="Enter email address"
            type="email"
            value=""
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="phone"
          >
            Phone Number *
          </label>
          <input
            aria-invalid="false"
            class="block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm border-gray-300"
            id="phone"
            name="phone"
            placeholder="Enter phone number"
            type="tel"
            value=""
          />
        </div>
      </div>
      <div
        class="flex justify-end space-x-3 mt-6"
      >
        <button
          class="px-4 py-2 text-sm font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
          type="button"
        >
          Cancel
        </button>
        <button
          class="px-4 py-2 text-sm font-medium text-white bg-blue-600 border border-transparent rounded-md shadow-sm hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed"
          type="submit"
        >
          Create Customer
        </button>
      </div>
    </form>
  </div>
</div>
`;
